feat(chart): box office
