# server/fiber.go
@@ -44,6 +44,9 @@ func GetFiberApp() *fiber.App {
 	t := app.Group("/title/:id")
 	t.Get("/", handler.TitleIndex)
 
+	c := app.Group("/chart/")
+	c.Get("box-office", handler.ChartBoxOffice)
+
 	app.Use(fallback)
 
 	return app
